<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/create_task_root_view_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateTaskActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/create_task_root_view_background"
        app:backgroundTint="@null"
        android:orientation="vertical"
        android:gravity="top"
        tools:context=".view.activities.CreateTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/layout_background_create_task"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="251dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_task" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="28dp"
                android:width="120dp"
                android:height="40dp"
                android:gravity="bottom|center"
                android:text="@string/create_task_lable"
                android:textColor="@color/white"
                android:textSize="19sp" />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:background="@color/edit_text_color"
                 android:layout_marginBottom="40dp"
                 android:layout_marginHorizontal="10dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtAddDueDate"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="10dp"
                android:text="Add due date"
                android:textColor="#ACACAC"
                android:textSize="16sp"
                app:switchPadding="30dp"
                app:thumbTint="@color/button_color"
                app:trackTint="@color/textview_color" />
            <EditText
                android:id="@+id/edtTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:height="50dp"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/view_background_edit_text_date"
                android:padding="10dp"
                android:hint="@string/task_name_hint"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/edtTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:gravity="top|left"
                android:fontFamily="@font/poppins_medium"
                android:height="50dp"
                android:padding="10dp"
                android:background="@drawable/view_background_edit_text_date"
                android:hint="@string/task_description_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/recycler_view_grey3_trans"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_alarm"/>

                    <EditText
                        android:id="@+id/edtCompletionDate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingHorizontal="5dp"
                        android:focusableInTouchMode="false"
                        android:ems="10"
                        android:hint="@string/complete_by_hint"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hint_color"
                        android:textSize="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="190dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@drawable/view_background_add_task_button"
            android:layout_gravity="center"
            android:text="@string/create_task_btn_label"
            android:textColor="@color/white"
            android:textSize="19dp"
            app:backgroundTint="@null" />

    </LinearLayout>
</ScrollView>