<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_background_create_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CreateTaskFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:orientation="vertical"
        android:gravity="top"
        tools:context=".view.activities.CreateTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="251dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_task" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="28dp"
                android:width="120dp"
                android:fontFamily="@font/poppins_medium"
                android:height="40dp"
                android:gravity="bottom|center"
                android:text="@string/create_task_lable"
                android:textColor="@color/bright_white"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/edit_text_color"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="10dp"/>

            <!--<com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtAddDueDate"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="10dp"
                android:text="Add due date"
                android:textColor="@color/button_color"
                android:textSize="16sp"
                app:switchPadding="30dp"
                app:thumbTint="@color/button_color"
                app:trackTint="@color/textview_color"
                />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/create_task_root_view_background"
                android:background="@drawable/view_background_edit_text_date">

                <EditText
                    android:id="@+id/edtTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minHeight="50dp"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/task_name_hint"
                    android:textAlignment="textStart"
                    android:textColor="@color/bright_white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="3dp"
                    android:background="@color/edit_text_color"/>

                <EditText
                    android:id="@+id/edtTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:layout_margin="5dp"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="10dp"
                    android:hint="Notes..."
                    android:textColor="@color/bright_white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="13dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdvCompletionDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/create_task_root_view_background"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgEnableDueDate"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_alarm"/>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@color/edit_text_color"/>

                    <TextView
                        android:id="@+id/edtCompletionDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:gravity="left|center_vertical"
                        android:focusableInTouchMode="false"
                        android:ems="10"
                        android:hint="@string/complete_by_hint"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/bright_white"
                        android:textColorHint="@color/hint_color"
                        android:textSize="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAddChecklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:drawableLeft="@drawable/ic_add_checklist"
                android:drawableTint="@color/button_color"
                android:drawablePadding="15dp"
                android:paddingLeft="10dp"
                android:text="Add Checklist"
                android:textColor="@color/button_color"
                android:textSize="16sp"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lytChecklistHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="5dp">
            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_medium"
                android:background="@android:color/transparent"
                android:text="Checklist"
                android:textAlignment="textStart"
                android:textColor="@color/bright_white"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imgAddMoreChecklistItems"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_add2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/edit_text_color"
                app:layout_constraintTop_toBottomOf="@id/imgAddMoreChecklistItems"
                app:layout_constraintEnd_toEndOf="@id/imgAddMoreChecklistItems"
                app:layout_constraintStart_toStartOf="@id/tvHeader"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChecklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/checklist_view_holder"
                android:clickable="false"/>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="190dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@drawable/view_background_add_task_button"
            android:layout_gravity="center"
            android:text="@string/create_task_btn_label"
            android:textColor="@color/bright_white"
            android:textSize="19dp"
            android:fontFamily="@font/poppins_medium"
            app:backgroundTint="@null" />

        <androidx.cardview.widget.CardView
            android:id="@+id/lytChecklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="3dp"
            android:layout_marginHorizontal="2dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/grey">
            <EditText
                android:id="@+id/edtChecklistItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minHeight="20dp"
                android:layout_margin="5dp"
                android:imeOptions="actionDone"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:hint="Add checklist item..."
                android:textAlignment="textStart"
                android:textColor="@color/bright_white"
                android:textColorHint="@color/hint_color"
                android:textSize="15dp" />
            <ImageView
                android:id="@+id/imgEnterChecklist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_enter"
                android:layout_gravity="right|center_vertical"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>